Nuevo listado de alimentos

--- a/src/main/resources/templates/alimentos/crear.html
+++ b/src/main/resources/templates/alimentos/crear.html
@@ -61,12 +61,12 @@
                         Categoría del alimento
                     </small>
                 </div>
-                <!-- <div class="custom-file"> -->
+                <div class="custom-file">
                     <input type="file"  id="imagen" name="img">
                     <label class="custom-file-label" for="imagen">
                         Elige una imagen
                     </label>
-                <!-- </div> -->
+                </div>
                 <button type="submit" class="btn btn-primary">
                     Crear
                 </button>
