--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -18,15 +18,11 @@
     </head>
 
     <div th:fragment="alert" >
-        <div th:if="${isAlert}" class='alert alert-success' role="alert">
+        <div th:if="${isAlert}" th:class='${"alert " + "alert-" + alertType}' role="alert">
             <h4 class="alert-heading" th:text="${alertHeading}"> </h4>
             <p th:text="${alertText}"> </p>
         </div>
     </div>
-    <!-- <div th:fragment="alert" class='alert alert-success' role="alert">
-        <h4 class="alert-heading" th:text="${alert-heading}"> </h4>
-        <p th:text="${alert-text}"></p>
-    </div> -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="nav">
         <a class="navbar-brand" th:href="@{/home}"> iEatIt </a>
