--- a/src/main/resources/templates/alimentos/crear.html
+++ b/src/main/resources/templates/alimentos/crear.html
@@ -62,12 +62,12 @@
                     </small>
                 </div>
                 <div class="custom-file">
-                    <input type="file"  id="imagen" name="img">
+                    <input type="file" class="custom-file-input"  id="imagen" name="img">
                     <label class="custom-file-label" for="imagen">
                         Elige una imagen
                     </label>
                 </div>
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary mt-3">
                     Crear
                 </button>
             </form>
