--- a/src/main/resources/templates/alimentos/listar.html
+++ b/src/main/resources/templates/alimentos/listar.html
@@ -4,10 +4,10 @@
     <div th:replace="fragments :: nav"></div>
     <body>
         <div class="container">
-            <div class="row">
-                <div th:replace="fragments :: alert"></div>
-            </div>
             <div class="row py-5">
+                <div class="col-9">
+                    <div th:replace="fragments :: alert"></div>
+                </div>
                 <div class="col-9">
                     <div class="row">
                         <div th:each="alimento, iStat : ${alimentos}" class="col-4">
