--- a/src/main/resources/templates/orden/listado.html
+++ b/src/main/resources/templates/orden/listado.html
@@ -7,6 +7,9 @@
 
 <div class="container">
     <div class="row py-5">
+        <div class="mx-auto">
+            <div th:replace="fragments :: alert"></div>
+        </div>
         <table class="table table-bordered table-hover">
             <thead>
             <tr>
