--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -6,12 +6,14 @@
 
 <div class="container">
     <div class="row py-5">
+        <div th:if="${param.error}" class="col-md-6 mx-auto">
+            <div class="alert alert-danger" role="alert">
+                Error al iniciar sesión, email o contraseña inválidos.
+            </div>
+        </div>
         <div class="mx-auto col-md-6">
             <div class="card">
                 <h4 class="card-header">Iniciar Sesión</h4>
-                <div th:if="${param.error}">
-                    Error al iniciar sesión.
-                </div>
                 <form class="card-body" th:action="@{/login}" method="post" autocomplete="off">
                     <div class="form-group">
                         <label for="email">Email</label>
